name:           BiobaseVienna
version:        0.3.0.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2010-2012
category:       Bioinformatics
synopsis:       Import Vienna energy parameters
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
description:
                Importer and Exporter for Vienna energy files. Allows
                converting Turner parameter files to Vienna parameter files.
                .
                This is the 2011 post-library split version, hence not
                deprecated anymore.



extra-source-files:
  parfiles/rna_turner2004.par



library
  build-depends:
    base >3 && <5,
--    bytestring        >= 0.9,
--    bytestring-lexing >= 0.4,
--    containers        >= 0.4,
--    file-embed        >= 0.0.4.1,
--    filepath          >= 1,
--    iteratee          >= 0.8.8,
--    mtl               >= 2,
--    split             >= 0.1.4,
    primitive         >= 0.5     ,
    vector            >= 0.10    ,
    BiobaseTurner     >= 0.3.0.0 ,
    BiobaseXNA        >= 0.7     ,
    PrimitiveArray    >= 0.5
  exposed-modules:
    Biobase.Vienna
--    Biobase.Vienna.Default
--    Biobase.Vienna.Export
--    Biobase.Vienna.Import
--    Biobase.Vienna.ImportPar
  ghc-options:
    -O2 -funbox-strict-fields



--executable ViennaConverter
--  build-depends:
--    cmdargs == 0.9.*
--  main-is:
--    ViennaConverter.hs
--  ghc-options:
--    -O2 -funbox-strict-fields



source-repository head
  type: git
  location: git://github.com/choener/BiobaseVienna


